# hpc-rocket

./: .buildinfo  .coverage  .coveragerc  .gitignore  AUTHORS  CITATION.cff  LICENSE  README.md  about.html  config.html  demo.html  genindex.html  githubactions.html  gitlabci.html  index.html  install.html  noxfile.py  objects.inv  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  sonar-project.properties  sshkeys.html  testrequirements.txt
.doctrees/: about.doctree  config.doctree  demo.doctree  environment.pickle  githubactions.doctree  gitlabci.doctree  index.doctree  install.doctree  quickstart.doctree  sshkeys.doctree
.github/workflows/: build-docs.yml  codeql.yml  python-app.yml  sonarcloud.yml
_sources/: about.md.txt  config.md.txt  demo.md.txt  githubactions.md.txt  index.md.txt
docker/: Dockerfile.openssh
docs/source/: conf.py  config.md  gitlabci.md  index.md  install.md  quickstart.md  sshkeys.md
hpclaunch/: __main__.py  application.py  cli.py  environmentpreparation.py  filesystemimpl.py  launchoptions.py  pyfilesystembased.py  slurmrunner.py  sshclient.py  sshexecutor.py  ui.py
hpclaunch/watcher/: jobwatcher.py  watcherthread.py
hpcrocket/: __init__.py  __main__.py  cli.py  pyfilesystembased.py  typesafety.py  ui.py
hpcrocket/cli/: __init__.py  _builders.py  _parsers.py  _yaml.py
hpcrocket/core/: application.py  environmentpreparation.py  errors.py  executor.py  filesystem.py  filesystemfactory.py  launchoptions.py  pbsbatchjob.py  pbscontroller.py  progressive_file_operations.py  slurmbatchjob.py  slurmcontroller.py  slurmrunner.py  workflowfactory.py  workflows.py
hpcrocket/core/filesystem/: __init__.py  glob.py  progressive.py
hpcrocket/core/schedulers/: __init__.py  base.py  pbscontroller.py  pbsstatus.py  slurmcontroller.py  slurmstatus.py
hpcrocket/core/workflows/: __init__.py  stages.py  workflow.py
hpcrocket/local/: localfilesystem.py
hpcrocket/pyfilesystem/: factory.py  localfilesystem.py  pyfilesystembased.py  sshfilesystem.py
hpcrocket/ssh/: chmodsshfs.py  connectiondata.py  errors.py  sshexecutor.py  sshfilesystem.py
hpcrocket/watcher/: jobwatcher.py  watcherthread.py
ssh_slurm_runner/: __main__.py  application.py  chmodsshfs.py  cli.py  environmentpreparation.py  errors.py  executor.py  filesystem.py  filesystemimpl.py  jobwatcher.py  launchoptions.py  output.py  pyfilesystem.py  pyfilesystembased.py  slurmrunner.py  sshclient.py  sshexecutor.py  sshfilesystem.py  ui.py
ssh_slurm_runner/watcher/: jobwatcher.py  watcherthread.py
test/: __init__.py  paramiko_sshclient_mockutil.py  pbsoutput.py  pyfilesystem_testdoubles.py  slurm_assertions.py  slurmoutput.py  sshclient_testdoubles.py  sshfilesystem_assertions.py  test__paramikosshclient.py  test__pyfilesystembased.py  test__slurmrunner__sshexecutor_integration.py  test__sshexecutor.py  test_application_integration.py  test_cli.py  test_environmentpreparation.py  test_executor.py  test_filesystem_abc.py  test_filesystemimpl.py  test_jobwatcher.py  test_pbsjob.py  test_progressive_fileoperations.py  test_pyfilesystemfactory.py  test_pyfilesystemimpl.py  test_remotecommand.py  test_slurmbatchjob.py  test_slurmcontroller.py  test_slurmjob.py  test_slurmrunner.py  test_slurmrunner_sshexecutor_integration.py  test_sshexecutor.py  test_sshfilesystem.py  test_typesafety.py  test_watcherthread.py  ui_testdoubles.py
test/acceptance/: _test_end_to_end.py  launch_config.yml  test_launch_acceptance.py
test/application/: __init__.py  assertions.py  executor_filesystem_callorder.py  executor_testdoubles.py  filesystem_testdoubles.py  fixtures.py  launchoptions.py  optionbuilders.py  test_application_cancel.py  test_application_cancel_options.py  test_application_cancel_watching.py  test_application_collect_clean.py  test_application_execution_order.py  test_application_filesystem_integration.py  test_application_finalize_options.py  test_application_integration.py  test_application_launch_options.py  test_application_sshexecutor_integration.py  test_application_status_options.py  test_application_watch_options.py
test/application/integration/: test_application_with_filesystem.py  test_application_with_paramiko.py
test/integration/application/: fixtures.py  test_application_with_filesystem.py  test_application_with_paramiko.py
test/integration/cli/: test_cli_app_integration.py
test/integration/paramiko/: test_remotecommand.py  test_slurmrunner_with_sshexecutor.py  test_sshexecutor.py
test/integration/pyfilesystem/: sshfilesystem_assertions.py  test_newpyfilesystembases.py  test_pyfilesystembased.py  test_pyfilesystemfactory.py  test_pyfilesystemimpl.py  test_sshfilesystem.py
test/pbsoutput/: qstat_cancelled.txt  qstat_completed.txt  qstat_completed_failed.txt  qstat_running.txt  qsub_submit.txt
test/slurmoutput/: sacct_canceled.txt  sacct_completed.txt  sacct_completed_failed.txt  sacct_running.txt  sbatch_submit.txt
test/testconfig/: config.yml  integration_launch_config.yml  integration_launch_config_fail_allowed.yml  local_slurm.job  real_config.yml  sbatch_copy.yml  slurm.job
test/testconfig/dir/subdir/: next.txt
test/testdoubles/: executor.py  filesystem.py  paramiko_sshclient_mockutil.py  pyfilesystem.py  sshclient.py  test_memoryfilesystem.py
test/workflows/: test_cancelstage.py  test_finalizestage.py  test_jobloggingstage.py  test_launchstage.py  test_launchworkflow.py  test_preparestage.py  test_statusstage.py  test_watchstage.py  test_workflow.py
