[project]
name = "hpc-rocket"
version = "0.6.3"
description = "A tool to run Slurm sbatch commands over SSH"
authors = [{ name = "Sven Marcus", email = "s.marcus@outlook.de" }]
dependencies = [
  "paramiko>=2.10.4",
  "fs>=2.4.16",
  "fs-sshfs>=1.0.1",
  "rich>=10.1.0",
  "PyYAML>=5.4.1",
  "cffi==1.17",
  "typing-extensions==4.14",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
hpc-rocket = "hpcrocket.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
markers = ["integration", "acceptance"]

[tool.pdm.scripts]
fmt = "black ."
doc = "sphinx-build -b html docs/source docs/build/html"
test = "pytest test -m 'not acceptance and not integration' -vv"
test-integration = "pytest test -m 'integration' -vv"
typecheck = "mypy --strict hpcrocket"
lint = "ruff check hpcrocket"

[tool.pdm.dev-dependencies]
format = ["black>=23.1.0"]
typecheck = ["mypy>=1.0.0", "types-paramiko>=3.0.0.3", "types-PyYAML>=6.0.12.6"]
doc = ["sphinx>=5.3.0", "myst-parser>=0.18.1", "furo>=2022.12.7"]
lint = ["ruff>=0.0.247"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 10

[dependency-groups]
dev = [
  "pytest>=6.2.3",
  "pytest-cov>=2.11.1",
  "pytest-timeout>=1.4.2",
  "nox>=2025.5.1",
  "testcontainers>=4.10.0",
  "ruff>=0.11.13",
]
