[metadata]
name = ssh_slurm_runner
version = 0.0.1
author = Sven Marcus
description = A tool to run Slurm sbatch commands over SSH
url = https://www.github.com/SvenMarcus/ssh-slurm-runner
license = MIT License
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = find:
install_requires =
    fs
    fs.sshfs
    paramiko
    rich
    pyaml

[options.entry_points]
console_scipts =
    main = ssh_slurm_runner:__main__