[metadata]
name = hpclaunch
version = 0.0.1
author = Sven Marcus
description = A tool to run Slurm sbatch commands over SSH
url = https://www.github.com/SvenMarcus/hpclaunch
license = MIT License
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = find_namespace:
install_requires =
    fs
    fs.sshfs
    paramiko
    rich
    pyaml


[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    hpclaunch = hpclaunch.__main__:main