[metadata]
name = hpc-rocket
version = 0.4.0
author = Sven Marcus
description = A tool to run Slurm sbatch commands over SSH
url = https://github.com/SvenMarcus/hpc-rocket
license = MIT License
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find_namespace:
install_requires =
    typing-extensions;python_version<'3.8'
    fs
    fs.sshfs
    paramiko
    rich
    pyaml


[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    hpc-rocket = hpcrocket.__main__:main